--- a/SatImage/nbproject/project.properties
+++ b/SatImage/nbproject/project.properties
@@ -24,7 +24,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/SAT_Project_SatImage.jar
+dist.jar=${dist.dir}/SatImage.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
